--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.4",
+    "@material-ui/icons": "^4.9.1",
+    "apollo-server": "^2.10.1",
+    "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:server": "node server/index.js",
     "build": "react-scripts build"
   },
   "eslintConfig": {
