--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
+    "apollo-boost": "^0.4.7",
     "apollo-server": "^2.10.1",
     "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
